--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         />
         <button type="submit" class="btn">Login</button>
         <p class="createacconut">
-          Don't have an account? <a href="./signup.html">Create new account</a>
+          Don't have an account?
+          <a href="./frontend/pages/signup.html">Create new account</a>
         </p>
       </form>
     </div>
