finished the frontend login functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input
           type="text"
           name="username"
-          id="username"
+          id="data"
           placeholder="enter your username or email"
         />
         <input
@@ -29,5 +29,7 @@
         </p>
       </form>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./frontend/scripts/login.js"></script>
   </body>
 </html>
