--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -6,5 +6,47 @@
     <link rel="stylesheet" href="../style/main.css" />
     <title>ToDo List</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>Lets Get Some Progress!!</h1>
+      <div class="input-form">
+        <div class="inputOne">
+          <label for="title">Enter the title</label>
+          <input
+            type="text"
+            name="title"
+            id="title"
+            placeholder="Title goes here"
+          />
+        </div>
+        <div class="inputTwo">
+          <label for="description">Enter the description</label>
+          <input
+            type="text"
+            name="description"
+            id="description"
+            placeholder="Description goes here"
+          />
+        </div>
+        <button class="btn" id="addTask">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-6 h-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M12 4.5v15m7.5-7.5h-15"
+            />
+          </svg>
+          Add
+        </button>
+      </div>
+      <div class="tasks-container" id="tasksContainer"></div>
+    </div>
+  </body>
 </html>
