add the toast message function

--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -9,6 +9,7 @@
   <body>
     <div class="container">
       <h1>Lets Get Some Progress!!</h1>
+      <h4></h4>
       <form class="input-form" id="taskForm">
         <div class="inputOne">
           <label for="title">Enter the title</label>
@@ -35,6 +36,7 @@
       </form>
       <div class="tasks-container" id="tasksContainer"></div>
     </div>
+    <div class="toast-message" id="toast-container"></div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../scripts/tasks.js"></script>
   </body>
