--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <h1>Lets Get Some Progress!!</h1>
-      <h4></h4>
+      <h4>Your Score: <span id="score-data"></span></h4>
       <form class="input-form" id="taskForm">
         <div class="inputOne">
           <label for="title">Enter the title</label>
